# filler

./: CMakeLists.txt  Makefile  filler.trace
includes/: filler.h  get_next_line.h
libft/: Makefile  ft_abs.c  libft.h
players/: sberic.filler
srcs/: algorithm.c  extra.c  get_next_line.c  main.c  read_all.c
